# Chatbot_with_feedback

./: .env.example  .gitignore  Dockerfile  README.md  app.py  assistant.py  db.py  docker-compose.yaml  generate_data.py  ingest.py  prep.py  pyproject.toml  rag_helper.py
