[project]
name = "llm-zoomcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jupyter>=1.1.1",
    "langchain>=1.3.1",
    "langchain-elasticsearch>=1.0.0",
    "langchain-huggingface>=1.2.2",
    "minsearch>=0.0.11",
    "openai>=2.37.0",
    "psycopg2-binary>=2.9.12",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "streamlit>=1.57.0",
]
